--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <h1> just checking this is working :) </h1>
         <script src="main.js"></script>
     </body>
 </html>
