--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1> just checking this is working :) </h1>
+        <div id="container"></div>
         <script src="main.js"></script>
     </body>
 </html>
