--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="container"></div>
