--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
     <head>
         <title>LOTR MYERS BRIGGS</title>
-        
+
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="container"></div>
+        <div id="results-container"></div>
         <script src="main.js"></script>
     </body>
 </html>
