--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     </head>
     <body>
         <div id="container"></div>
-        <div id="results-container"></div>
+        <!-- <div id="results-container"></div> -->
+        
         <script src="main.js"></script>
     </body>
 </html>
