--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
         <title>LOTR MYERS BRIGGS</title>
 
         <link rel="stylesheet" href="style.css">
+      
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=KoHo:wght@200&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
+        <link
+            href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=KoHo:wght@200&family=Special+Elite&display=swap"
+            rel="stylesheet">
     </head>
     <body>
         <div id="container"></div>
