--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <div id="container"></div>
         <!-- <div id="results-container"></div> -->
-        
-        <script src="main.js"></script>
+        <script type='text/javascript' src='config.js'></script>
+        <script src="main_copy.js"></script>
     </body>
 </html>
