file name correction

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <div id="container"></div>
         <!-- <div id="results-container"></div> -->
         <script type='text/javascript' src='config.js'></script>
-        <script src="main_copy.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
