--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" type="image/jpeg" href="LOTR.jpeg">
         <title>LOTR MYERS BRIGGS</title>
 
         <link rel="stylesheet" href="style.css">
