--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
         <link rel="icon" type="image/jpeg" href="LOTR.jpeg">
         <title>LOTR MYERS BRIGGS</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style2.css">
       
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link
             href="https://fonts.googleapis.com/css2?family=Josefin+Slab&family=KoHo:wght@200&family=Special+Elite&display=swap"
             rel="stylesheet">
     </head>
-    <body>
+    <body id="body">
         <div id="container"></div>
         <!-- <div id="results-container"></div> -->
         <script type='text/javascript' src='config.js'></script>
-        <script src="main_copy.js"></script>
+        <script src="main_copy2.js"></script>
     </body>
 </html>
