final tweaks - extra music and css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="icon" type="image/jpeg" href="LOTR.jpeg">
         <title>LOTR MYERS BRIGGS</title>
 
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style3.css">
       
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link
@@ -15,6 +15,6 @@
         <div id="container"></div>
         <!-- <div id="results-container"></div> -->
         <script type='text/javascript' src='config.js'></script>
-        <script src="main_copy.js"></script>
+        <script src="main_copy3.js"></script>
     </body>
 </html>
